[gd_scene load_steps=5 format=3]

[ext_resource type="PackedScene" uid="uid://tt3cnvs3qqlq" path="res://addons/vsk_menu/vsk_large_button.tscn" id="1"]
[ext_resource type="Theme" uid="uid://3ehnjbt2mvio" path="res://addons/emote_theme/emote_theme.tres" id="1_isym3"]
[ext_resource type="Script" path="res://addons/vsk_menu/title_screen.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://mwvsa6uo0xhh" path="res://vsk_default/icon/v_sekai_logo.png" id="3"]

[node name="IngameMenuScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_isym3")
script = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_right = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/CenterContainer"]
modulate = Color(0.449219, 0.0585938, 0.0585938, 1)
layout_mode = 2
texture = ExtResource("3")
ignore_texture_size = true
flip_v = true

[node name="ButtonsCenterContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonsVerticalContainer" type="VBoxContainer" parent="CenterContainer/ButtonsCenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="OptionsButton" parent="CenterContainer/ButtonsCenterContainer/ButtonsVerticalContainer" instance=ExtResource("1")]
layout_mode = 2
text = "TR_MENU_OPTIONS"

[node name="DisconnectButton" parent="CenterContainer/ButtonsCenterContainer/ButtonsVerticalContainer" instance=ExtResource("1")]
layout_mode = 2
text = "TR_MENU_DISCONNECT"

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
min_size = Vector2i(150, 52)
dialog_hide_on_ok = false

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="BuildLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "BUILD_LABEL"

[connection signal="pressed" from="CenterContainer/ButtonsCenterContainer/ButtonsVerticalContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CenterContainer/ButtonsCenterContainer/ButtonsVerticalContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
