[gd_scene load_steps=7 format=3 uid="uid://un2v3mc5d0so"]

[ext_resource type="Script" uid="uid://cteq0sibt8no3" path="res://addons/vsk_menu/title_screen.gd" id="1"]
[ext_resource type="Theme" uid="uid://b04ev0cbgpas" path="res://addons/emote_theme/emote_theme.tres" id="1_qxdo7"]
[ext_resource type="PackedScene" uid="uid://bxaya8pq2i21c" path="res://addons/vsk_menu/main_menu/session_container.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://bfemdvayr8jju" path="res://vsk_default/icon/v_sekai_logo.png" id="3_31etj"]
[ext_resource type="PackedScene" uid="uid://tt3cnvs3qqlq" path="res://addons/vsk_menu/vsk_large_button.tscn" id="4"]
[ext_resource type="Script" uid="uid://yxnpkw6lvdb4" path="res://addons/vsk_menu/main_menu/groups_logo_no_bg.gd" id="5"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qxdo7")
script = ExtResource("1")
default_focus = NodePath("Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/HostServer")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Panel/Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="VBoxContainer" parent="Panel/Container/Control"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_right = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Container/Control/CenterContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="GroupsLogoNoBg" type="TextureRect" parent="Panel/Container/Control/CenterContainer"]
modulate = Color(0.449219, 0.0585938, 0.0585938, 1)
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("3_31etj")
expand_mode = 3
script = ExtResource("5")

[node name="ButtonsVerticalContainer" type="VBoxContainer" parent="Panel/Container/Control/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HostServer" parent="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer" instance=ExtResource("4")]
layout_mode = 2
text = "TR_MENU_HOST_SERVER"

[node name="BrowseServers" parent="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer" instance=ExtResource("4")]
layout_mode = 2
text = "TR_MENU_BROWSE_SERVERS"

[node name="OptionsButton" parent="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer" instance=ExtResource("4")]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "TR_MENU_OPTIONS"

[node name="CreditsButton" parent="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer" instance=ExtResource("4")]
layout_mode = 2
text = "TR_MENU_CREDITS"

[node name="ExitButton" parent="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer" instance=ExtResource("4")]
layout_mode = 2
text = "TR_MENU_EXIT"

[node name="TopBar" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 2

[node name="SessionContainer" parent="Panel/TopBar" instance=ExtResource("3")]
layout_mode = 2

[node name="ExitDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(225, 100)
min_size = Vector2i(150, 52)
max_size = Vector2i(800, 100)
dialog_text = "TR_MENU_QUIT_MESSAGE"
dialog_hide_on_ok = false

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="BuildLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -17.0
grow_horizontal = 2
grow_vertical = 0
text = "BUILD_LABEL"

[connection signal="pressed" from="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/HostServer" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/BrowseServers" to="." method="_on_BrowseServers_pressed"]
[connection signal="pressed" from="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Panel/Container/Control/CenterContainer/ButtonsVerticalContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="sign_in_button_pressed" from="Panel/TopBar/SessionContainer" to="." method="_on_sign_in_button_pressed"]
[connection signal="sign_out_button_pressed" from="Panel/TopBar/SessionContainer" to="." method="_on_sign_out_button_pressed"]
